@@ -23,14 +23,16 @@ package org.apache.hadoop.hbase.stargate;
 import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.util.Map;
+
 import javax.ws.rs.GET;
 import javax.ws.rs.Produces;
 import javax.ws.rs.WebApplicationException;
 import javax.ws.rs.core.CacheControl;
 import javax.ws.rs.core.Context;
 import javax.ws.rs.core.Response;
-import javax.ws.rs.core.Response.ResponseBuilder;
 import javax.ws.rs.core.UriInfo;
+import javax.ws.rs.core.Response.ResponseBuilder;
+
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.hbase.HRegionInfo;
@@ -56,12 +58,12 @@ public class RegionsResource implements Constants {
 
   private Map<HRegionInfo,HServerAddress> getTableRegions()
       throws IOException {
-    HTablePool pool = RESTServlet.getInstance().getTablePool(this.table);
-    HTable table = pool.get();
+    HTablePool pool = RESTServlet.getInstance().getTablePool();
+    HTable table = pool.getTable(this.table);
     try {
       return table.getRegionsInfo();
     } finally {
-      pool.put(table);
+      pool.putTable(table);
     }
   }
 
